--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "antd": "^5.4.0",
     "framer-motion": "^10.11.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -18,7 +19,8 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
